re PR target/7856 ([arm] invalid offset in constant pool reference)

PR target/7856
* arm.c (use_return_insn): Don't use a return insn if there are
saved integer regs, but LR is not one of them.

From-SVN: r58715